Simplified Storybook folder/group structure and added sorting configuration

--- a/packages/map-core/Map.stories.mdx
+++ b/packages/map-core/Map.stories.mdx
@@ -3,9 +3,9 @@ import { withKnobs, object, number, boolean, text } from '@storybook/addon-knobs
 import { RplContainer, RplRow, RplCol } from '@dpc-sdp/ripple-grid'
 import YourvicMapCore from './index.vue'
 
-<Meta title="Molecules/Map" component={ YourvicMapCore } decorators={ [withKnobs] } />
+<Meta title="Maps/Core" component={ YourvicMapCore } decorators={ [withKnobs] } />
 
-# Map
+# Map Core
 
 <Description of={ YourvicMapCore } type='docgen' />
 
