Added tabindex to map container so users can interact with it via the keyboard

--- a/packages/map-core/Map.stories.mdx
+++ b/packages/map-core/Map.stories.mdx
@@ -187,11 +187,11 @@ element to be tied to its width)
                 :enableMapboxWatermark="false"
                 :center="[16138405.843820328, -4552817.013522999]"
                 :zoom="17"
-                :enableZoomControl="false"
+                :enableZoomControl="true"
                 :enableAttributionControl="false"
                 :enableFullScreenControl="false"
-                :enablePanInteraction="false"
-                :enableZoomInteraction="false"
+                :enablePanInteraction="true"
+                :enableZoomInteraction="true"
                 :enableRotateInteraction="false"
               />
             </rpl-col>
