add tree map chart, refactor bar and line charts and fix bugs with sizing of chart components

--- a/packages/BarChart/BarChart.stories.mdx
+++ b/packages/BarChart/BarChart.stories.mdx
@@ -57,7 +57,7 @@ The data object that should contain the following keys:
             default: text('title', undefined)
           },
           data: {
-            default: object('data', chartData)
+            default: () => object('data', chartData)
           },
           showLegend: {
             default: boolean('showLegend', false)
