--- a/packages/TreeMap/TreeMap.stories.mdx
+++ b/packages/TreeMap/TreeMap.stories.mdx
@@ -1,6 +1,7 @@
 import { Meta, Preview, Story, Props, Source, Description } from '@storybook/addon-docs/blocks';
 import TreeMap from './index.vue'
 import { withKnobs, text, select, object } from '@storybook/addon-knobs'
+import { RplContainer, RplRow, RplCol } from '@dpc-sdp/ripple-grid'
 import _merge from 'lodash.merge'
 import { treeMapTemplate, chartData } from './storiesConstants.js'
 
@@ -26,7 +27,7 @@ import { TreeMap } from '@dpc-sdp/yourvic-treemap'
 
 ```html
 <tree-map
-  :data="data" :valueAttr="value" :labelAttr="name" 
+  :data="data" :valueAttr="value" :labelAttr="name"
 />
 ```
 
@@ -41,7 +42,11 @@ import { TreeMap } from '@dpc-sdp/yourvic-treemap'
     {
       {
         components: { TreeMap },
-        template: treeMapTemplate,
+        template: `
+          <div :style="divStyle">
+            <tree-map :title="title" :data="data" :valueAttr="valueAttr" :labelAttr="labelAttr" :dataFormat="dataFormat" />
+          </div>
+        `,
         props: {
           title: {
             default: text('title', undefined)
@@ -57,6 +62,9 @@ import { TreeMap } from '@dpc-sdp/yourvic-treemap'
           },
           dataFormat: {
             default: select('data format', { normal: 'normal', percentage: 'percentage', dollar: 'dollar', 'thousand dollar': 'thousandDollar' }, 'normal')
+          },
+          divStyle: {
+            default: () => object('divStyle', { width: '400px', height: '400px' })
           }
         }
       }
@@ -78,6 +86,38 @@ import { TreeMap } from '@dpc-sdp/yourvic-treemap'
         valueAttr: { default: () => 'value' },
         labelAttr: { default: () => 'name' },
         dataFormat: { default: () => 'normal' }
+       }
+      }
+    }
+  </Story>
+</Preview>
+
+## Ripple Grid
+
+<Preview>
+  <Story name="Ripple Grid">
+    {
+      {
+       components: { TreeMap, RplContainer, RplRow, RplCol },
+       template: `
+        <RplContainer style="width: 100%">
+          <rpl-row>
+            <rpl-col cols=1></rpl-col>
+            <rpl-col cols=10>
+              <div style="width: 100%; height: 100vh">
+                <tree-map :title="title" :data="data" :valueAttr="valueAttr" :labelAttr="labelAttr" :dataFormat="dataFormat" />
+              </div>
+            </rpl-col>
+            <rpl-col cols=1></rpl-col>
+          </rpl-row>
+        </RplContainer>
+       `,
+       props: {
+         title: { default: () => 'Ripple Grid Chart' },
+         data: { default: () => chartData },
+         valueAttr: { default: () => 'value' },
+         labelAttr: { default: () => 'name' },
+         dataFormat: { default: () => 'normal' }
        }
       }
     }
