add height option in divstyle prop as chart has a set aspect ratio

--- a/packages/PieChart/PieChart.stories.mdx
+++ b/packages/PieChart/PieChart.stories.mdx
@@ -68,7 +68,7 @@ The data object that should contain the following keys:
             default: select('data format', { normal: 'normal', percentage: 'percentage', dollar: 'dollar', 'thousand dollar': 'thousandDollar' }, 'normal')
           },
           divStyle: {
-            default: () => object('divStyle', { width: '400px' })
+            default: () => object('divStyle', { width: '400px', height: '400px' })
           }
         }
       }
