--- a/packages/map-core/MapTileLayer.stories.mdx
+++ b/packages/map-core/MapTileLayer.stories.mdx
@@ -19,18 +19,23 @@ npm install @dpc-sdp/yourvic-map-core --save
 ## Import
 
 ```javascript
-import { YourvicMapTileLayer } from '@dpc-sdp/yourvic-map-core'
+import { YourvicMapCore, YourvicMapTileLayer } from '@dpc-sdp/yourvic-map-core'
 ```
 
 ## Usage
 
+One or more ```yourvic-map-tile-layer``` components can be declared as children of ```yourvic-map-core```. The simplest
+example is to use the ```OSM``` layer type which comes pre-configured.
+
 ```html
 <yourvic-map-core
-  :style="{height: '400px'}"
-  :baseMapUrl="https://api.mapbox.com/styles/v1/myvictoira/cjio5h4do0g412smmef4qpsq5/tiles/256/{z}/{x}/{y}"
-  :center="[16136905.843820328, -4383057.013522999]"
-  :zoom="7"
-/>
+  :containerStyle="{ position: 'relative', width: '100%', height:'100vh' }"
+  :center="[16138405.843820328, -4552817.013522999]"
+>
+  <yourvic-map-tile-layer
+    type="OSM"
+  />
+</yourvic-map-core>
 ```
 
 ## Props
@@ -339,11 +344,13 @@ This example shows how to create an interactive map that fills it's parent conta
             <yourvic-map-tile-layer
               type="XYZ"
               url="http://a.tile.stamen.com/toner/{z}/{x}/{y}.png"
+              :zIndex="1"
             />
             <yourvic-map-tile-layer
               type="ArcGIS"
               url="https://gis.mapshare.vic.gov.au/arcgis/rest/services/mapshare/PublicLandAndPark/MapServer"
               :opacity="0.7"
+              :zIndex="2"
             />
           </yourvic-map-core>
         `,
