--- a/packages/map-core/MapTileLayer.stories.mdx
+++ b/packages/map-core/MapTileLayer.stories.mdx
@@ -274,7 +274,7 @@ This example shows how to create an interactive map that fills it's parent conta
   </Story>
 </Preview>
 
-## WMS - Change Projection
+## WMS - GDA94 Projection
 
 <Preview>
   <Story name="WMS - GDA94 Projection">
@@ -285,6 +285,7 @@ This example shows how to create an interactive map that fills it's parent conta
           <yourvic-map-core
             :containerStyle="{ position: 'relative', width: '100%', height:'100vh' }"
             :center="[144, -37]"
+            :zoom="3"
             :projection="projection"
           >
             <yourvic-map-tile-layer
@@ -292,7 +293,6 @@ This example shows how to create an interactive map that fills it's parent conta
               url="http://services.ga.gov.au/gis/services/Bathymetry_Topography/MapServer/WMSServer"
               :params="{'LAYERS': 'Australian_Bathymetry_and_Topography'}"
               :projection="projection"
-              serverType="geoserver"
             />
           </yourvic-map-core>
         `,
